--- a/styles.css
+++ b/styles.css
@@ -13,17 +13,15 @@ body {
 #mainContainer {
     display: flex;
     justify-content: center;
-    border: 1px dashed white;
+
     height: 100%;
     width: 100%;
 }
 
 #gameWindow {
     display: grid;
-    border: 1px dashed white;
     height: 600px;
     width: 700px;
-
     grid-template-rows: auto auto auto;
     grid-template-columns: auto auto auto;
 }
@@ -32,4 +30,8 @@ body {
     border: 1px dashed white;
     height: 200px;
     width: 233px;
+}
+
+.playerMarker {
+    font-size: 72px;
 }
